# jpeg_compressor

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  install.sh
src/: main.rs
