[package]
name = "jpeg_watcher_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.13"
image = "0.24.5"
turbojpeg = {version = "0.5.2", features = ["image"]}
walkdir = "2"
tokio = { version = "1", features = ["full"] }
pathdiff = "0.2.1"